fixed header wrapping

--- a/style.css
+++ b/style.css
@@ -147,7 +147,9 @@ header select {
 .card {
   border: 1px solid black;
   border-radius: 0.5rem;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   overflow: hidden;
   background-color: var(--bg-secondary);
   cursor: pointer;
@@ -161,8 +163,11 @@ header select {
 .card-header {
   display: block;
   background-color: var(--bg-primary);
-  width: 100%;
   text-align: center;
+  padding: 0 0.5rem;
+  text-wrap: wrap;
+  width: calc(100% - 1rem);
+  max-width: 18rem;
 }
 
 .card img {
